[project]
name = "noisytracking"
version = "0.1.0"
description = "A Python library for noisytracking"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lark>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noisytracking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "tabulate>=0.9.0",
]
